--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+        //
+        //  Define the global query string for sending the application id.
+        var queryString = { "ApplicationID": "AspectHRBot" };
+    </script>
 </head>
 <body>
   <app-root></app-root>
